--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,8 +12,8 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#" th:href="@{/}">Home</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="#" th:href="@{/products}">Products</a></li>
-                        <li><a href="#" th:href="@{/product/new}">Create Product</a></li>
+                        <li><a href="#" th:href="@{/cliente}">clientes</a></li>
+                        <li><a href="#" th:href="@{/cliente/new}">Create cliente</a></li>
                     </ul>
 
                 </div>
@@ -28,10 +28,7 @@
                     <h3>SpringBoot Store Web App</h3>
                 </div>
             </div>
-            <div class="row text-center">
-                <img src="../../static/images/tiendaropa.jpg" width="400"
-                     th:src="@{/images/tiendaropa.jpg}"/>
-            </div>
+         
         </div>
     </div>
 </div>
